--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,18 @@
 #Connection Props
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/persondb
+spring.datasource.url=jdbc:mysql://localhost:3306/persondb?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=fals
 spring.datasource.username=root
 spring.datasource.password=root
 
 #jpa Props
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
+
+
+
+
