--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,6 @@ spec:
     environment: production
   ports:
     - name: http
-      port: <80>
+      port: 80
       targetPort: 3000
   type: ClusterIP
